--- a/src/Components/project.css
+++ b/src/Components/project.css
@@ -6,7 +6,7 @@ h2 {
   text-align: center;
 }
 .container-title {
-    margin-top: 10px;
+  margin-top: 10px;
   color: #42446e;
   text-align: center;
   font-family: Poppins;
@@ -26,7 +26,7 @@ h2 {
   margin-top: 50px;
 }
 .card {
-  margin-top: 100px;    
+  margin-top: 100px;
   width: 373px;
   height: 450px;
   flex-shrink: 0;
@@ -51,8 +51,8 @@ h2 {
   line-height: 26px;
 }
 .description-portfolio {
-  margin-top: 20px;  
-  color:  #666;
+  margin-top: 20px;
+  color: #666;
   font-family: Poppins;
   font-size: 18px;
   font-style: normal;
@@ -60,7 +60,6 @@ h2 {
   line-height: 26px;
 }
 .stack {
-
   color: #42446e;
   font-family: Poppins;
   font-size: 14px;
@@ -68,12 +67,11 @@ h2 {
   font-weight: 300;
   line-height: 26px;
 }
-.project-links{
-    margin-top: 70px;
+.project-links {
+  margin-top: 40px;
 }
 .project-links a {
-
-  text-decoration: none;
+  text-decoration: none !important;
   color: #000;
   font-family: Poppins;
   font-size: 16px;
