--- a/src/Components/project.css
+++ b/src/Components/project.css
@@ -1,8 +1,7 @@
 .project-container {
   margin-top: 150px;
 }
-.project-container h1,
-h2 {
+.project-container .center {
   text-align: center;
 }
 .container-title {
