--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,8 @@
 }
 .App{
     background-color: #fff;
-    margin: 0 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: auto ;
 }
